# fantasy-lang-generator

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: sync-wiki.yml
docs/: README.md
docs/02_Data-Structures/: API-Response-Types.md  Cultural-Influences.md  Derived-Content.md  Grammar.md  Language-Object.md  Metadata.md  Phonology.md  Version-History-Types.md  Vocabulary.md
docs/03_Examples/: Dwarven-Language.md  Elvish-Language.md  Minimal-Example.md
docs/04_Schemas/: JSON-Schema.md  Validation-Rules.md  language_schema.json  minimal_language.json
docs/05_Development/: API-Reference.md
docs/data-structures/: 00_overview.md
docs/schemas/: language_schema.md
fantasy_langgen/: __init__.py
fantasy_langgen/models/: __init__.py  core.py  culture.py  derived.py  grammar.py  phonology.py  responses.py  vocabulary.py
fantasy_langgen/schemas/: __init__.py  validation.py
fantasy_langgen/utils/: __init__.py  types.py
scripts/: bump-version.sh  merge_wiki.py  release.sh
wiki/: Data Structures.md  Development.md  Examples.md  Overview.md  Schemas.md
